--- a/kubernetes/cluster/apps/homerow/nopcommerce/helm-release.yaml
+++ b/kubernetes/cluster/apps/homerow/nopcommerce/helm-release.yaml
@@ -38,6 +38,6 @@ spec:
     persistence:
       config:
         enabled: true
-        mountPath: /app/App_Data
+        mountPath: /root
         hostPath: /var/local/kubernetes/homerow/nopcommerce
         type: hostPath
