--- a/kubernetes/cluster/apps/homerow/nopcommerce/helm-release.yaml
+++ b/kubernetes/cluster/apps/homerow/nopcommerce/helm-release.yaml
@@ -34,7 +34,8 @@ spec:
         enabled: true
         ports:
           http:
-            port: 80
+            port: 443
+            protocol: HTTPS
     persistence:
       config:
         enabled: true
