--- a/kubernetes/cluster/apps/secrets/homerow-secrets.sops.yaml
+++ b/kubernetes/cluster/apps/secrets/homerow-secrets.sops.yaml
@@ -14,6 +14,13 @@ stringData:
     wordpress_first_name: ENC[AES256_GCM,data:Y8YE0S+6mw==,iv:ICA0AySgNeLfaZAoyEm5yT5SSCuMZdO8vKgiyAlwCT8=,tag:i628bpiO4CkKFmzy3m686w==,type:str]
     wordpress_last_name: ENC[AES256_GCM,data:zKuD,iv:G40yfL21u2gzJfA9d0DGB+MrZpRsK9hSiI+aCWE51Rs=,tag:jTZ8rvSHr8M+1EYsDmvrPg==,type:str]
     wordpress_blog_name: ENC[AES256_GCM,data:U/wsxflYQw==,iv:1D4E7+2skZSIZfmiPXDwjbbtZv0BmJo0r+1UuuDFWRA=,tag:Q5DwpPmPi6BcvRDEINiiLQ==,type:str]
+    magento_host: ENC[AES256_GCM,data:AwEmFfthkMXamfTOEqnbb5nP,iv:z6ppTmlr+iH3hYN41hoQ51aLYZhjyP4TrcEOwj/Vczs=,tag:zx8gKSTNIlxQNMZvFmoGSQ==,type:str]
+    magento_username: ENC[AES256_GCM,data:aUi+7A==,iv:oql3PaNJotJVc9YUDkiDrfYY379oTB/uUd5XJwmN6gk=,tag:dSlW1AF5OUoId4hNXlrWPw==,type:str]
+    magento_password: ENC[AES256_GCM,data:f4e0/R3KllwtU41YO0o3p3ez8dqz/GOUdtjcWmHkp7Q=,iv:7yPcAssu17eTJb6OBdt3WX732afrPm/nZB7ZgYQuaM0=,tag:KcvdztCl1J1M1Cr/DeDCvA==,type:str]
+    magento_email: ENC[AES256_GCM,data:KUbI/LWqiAdvt6zNTzaE,iv:SACn+gcOxDMqckNLXLauxXiHSD9Fk46yQXO6LaJ7esA=,tag:qjJWX+QgSQlkiM4bW56xUQ==,type:str]
+    magento_first_name: ENC[AES256_GCM,data:M68c2qBbpg==,iv:mtmnXE7Eu0yRzyZJpv3S6DNgsDBxy0C1owdgqYXXfqo=,tag:FMiSmsSnno9t8WpOLDub+Q==,type:str]
+    magento_last_name: ENC[AES256_GCM,data:cmAQ,iv:FaqFZYccZ8jcl6NnhxSi1WhHH/MtZYaFc8HSxZe3qBU=,tag:7qsIJcfNib1qQNAoLcIBbg==,type:str]
+    magento_admin_uri: ENC[AES256_GCM,data:TdFgGDA=,iv:A3krKYla+aIfGs0mDBmbSjid/7HLpygamR1RxSIgZQI=,tag:rHq1AVDYAEsk6vO0iUN5Qw==,type:str]
 kind: Secret
 sops:
     kms: []
@@ -21,8 +28,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-01-18T22:57:04Z"
-    mac: ENC[AES256_GCM,data:HZ0WN95w/bN8Xxp0PoxQhgd8OudkX0ACEQFEIwNaXZhfahg6b0h/arfLBtpbQeqeXpshRXwV3qOmwbTISEyWmzk62DULW6mUtl3z8lxc9XNkhn5kqAxT1b7XQxd68AfVZATN/HrB3/GwfY6gwmdK7SPJEj9iRTwDS7VWz97WoT8=,iv:hg7Q+qFQATCk7nENqgMif5DKCnqFuBh78Lm7yTTfqOo=,tag:zFXz0m2hoBMdQEkmSBN1+A==,type:str]
+    lastmodified: "2022-02-08T05:08:16Z"
+    mac: ENC[AES256_GCM,data:QoTJN4E2AiApSUsSdhickNPoRFY5FH2+gTZRQhDME2mRBj0YbAbic7VqAXeZMkMYlY1myTQVhEG7QzwrMHFHZGDLC7mtnC9jNeQi/83kmvBM/k8uRugkGC51I8wOsCYMfdnDWySUR9lsoioOrY+Qte7e3cHY8EdV80DWU0KJexs=,iv:LkC/g652WPOs3DnId5d3cf6hLvP6V3n/9H2vsmrCedI=,tag:IWmOcXB1GoOme3MoRCX7cA==,type:str]
     pgp:
         - created_at: "2022-01-18T22:37:12Z"
           enc: |
