--- a/kubernetes/cluster/apps/homerow/magento/helm-release.yaml
+++ b/kubernetes/cluster/apps/homerow/magento/helm-release.yaml
@@ -53,3 +53,8 @@ spec:
     ingress:
       enabled: true
       hostname: magento.homerow.ca
+    
+    autoscaling:
+      enabled: true
+      minReplicas: 1
+      maxReplicas: 1
