--- a/kubernetes/cluster/apps/homerow/magento/helm-release.yaml
+++ b/kubernetes/cluster/apps/homerow/magento/helm-release.yaml
@@ -39,15 +39,18 @@ spec:
         password: ${mysql_password}
       primary:
         persistence:
-          hostPath: /var/local/kubernetes/homerow/magento-database
+          storage-class:
+          exitingClaim: data-magento-staging-mariadb-0
       
     elasticsearch:
       master:
         persistence:
-          hostPath: /var/local/kubernetes/homerow/magento-elasticsearch-master
+          storage-class: local-storage
+          exitingClaim: data-magento-staging-elasticsearch-master-0
       data:
         persistence:
-          hostPath: /var/local/kubernetes/homerow/magento-elasticsearch-data
+          storage-class: local-storage
+          existingClaim: data-magentostaging--elasticsearch-data-0
 
     persistence:
       hostPath: /var/local/kubernetes/homerow/magento
