--- a/kubernetes/cluster/apps/homerow/magento/persistance-elasticsearch-master.yaml
+++ b/kubernetes/cluster/apps/homerow/magento/persistance-elasticsearch-master.yaml
@@ -4,6 +4,9 @@ metadata:
   name: data-magento-elasticsearch-master-pv
   namespace: homerow
 spec:
+  claimRef:
+    name: data-magento-staging-elasticsearch-master-0
+    namespace: homerow
   capacity:
     storage: 10Gi
   accessModes:
@@ -21,3 +24,17 @@ spec:
           operator: In
           values:
           - kube01
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: data-magento-staging-elasticsearch-master-0
+  namespace: homerow
+spec:
+  storageClassName: "local-storage"
+  volumeName: data-magento-elasticsearch-master-pv
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
