--- a/kubernetes/cluster/apps/homerow/magento/kustomization.yaml
+++ b/kubernetes/cluster/apps/homerow/magento/kustomization.yaml
@@ -2,4 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - persistance-mariadb.yaml
+  - persistance-elasticsearch-master.yaml
+  - persistance-elasticsearch-data.yaml
   - helm-release.yaml
