Added chown modification

--- a/kubernetes/cluster/csi/local-path-storage.yaml
+++ b/kubernetes/cluster/csi/local-path-storage.yaml
@@ -129,7 +129,8 @@ data:
         esac
     done
 
-    mkdir -m 0777 -p ${absolutePath}
+    mkdir -m 0775 -p ${absolutePath}
+  chown 568:1001 $(absolutePath}
   teardown: |-
     #!/bin/sh
     while getopts "m:s:p:" opt
