--- a/kubernetes/cluster/apps/homerow/magento/kustomization.yaml
+++ b/kubernetes/cluster/apps/homerow/magento/kustomization.yaml
@@ -2,7 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - persistance-mariadb.yaml
-  - persistance-elasticsearch-master.yaml
-  - persistance-elasticsearch-data.yaml
+  - persistance.yaml
   - helm-release.yaml
