--- a/kubernetes/cluster/apps/homerow/magento/persistance.yaml
+++ b/kubernetes/cluster/apps/homerow/magento/persistance.yaml
@@ -1,23 +1,12 @@
 apiVersion: v1
-kind: PersistentVolume
+kind: PersistentVolumeClaim
 metadata:
-  name: data-magento-pv
+  name: data-magento-pvc
   namespace: homerow
 spec:
-  capacity:
-    storage: 10Gi
+  resources:
+    requests:
+      storage: 10Gi
   accessModes:
   - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Retain
-  storageClassName: "local-storage"
-  volumeMode: Filesystem
-  local:
-    path: /var/local/kubernetes/homerow/magento
-  nodeAffinity:
-    required:
-      nodeSelectorTerms:
-      - matchExpressions:
-        - key: kubernetes.io/hostname
-          operator: In
-          values:
-          - kube01
+  storageClassName: "local-path"
