--- a/kubernetes/cluster/apps/homerow/magento/persistance-mariadb.yaml
+++ b/kubernetes/cluster/apps/homerow/magento/persistance-mariadb.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: data-magento-mariadb
+  name: data-magento-mariadb-pvc
   namespace: homerow
 spec:
-  storageClassName: "local-path"
-  accessModes:
-  - ReadWriteOnce
   resources:
     requests:
       storage: 10Gi
+  accessModes:
+  - ReadWriteOnce
+  storageClassName: "local-path"
