Changed deletion to a move

--- a/kubernetes/cluster/csi/local-path-storage.yaml
+++ b/kubernetes/cluster/csi/local-path-storage.yaml
@@ -148,7 +148,7 @@ data:
         esac
     done
 
-    rm -rf ${absolutePath}
+    mv ${absolutePath} /var/local/kubernetes/garbage
   helperPod.yaml: |-
     apiVersion: v1
     kind: Pod
