--- a/kubernetes/cluster/apps/homerow/database/helm-release.yaml
+++ b/kubernetes/cluster/apps/homerow/database/helm-release.yaml
@@ -31,4 +31,4 @@ spec:
       tag: 8.0.27-debian-10-r78
     primary:
       persistence:
-        exitingClaim: data-mysql
+        existingClaim: data-mysql
