--- a/kubernetes/cluster/apps/homerow/database/persistance.yaml
+++ b/kubernetes/cluster/apps/homerow/database/persistance.yaml
@@ -9,4 +9,5 @@ spec:
       storage: 10Gi
   accessModes:
   - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
   storageClassName: "local-path"
