--- a/kubernetes/cluster/apps/homerow/database/persistance.yaml
+++ b/kubernetes/cluster/apps/homerow/database/persistance.yaml
@@ -9,5 +9,5 @@ spec:
       storage: 10Gi
   accessModes:
   - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Retain
+  claimPolicy: Retain
   storageClassName: "local-path"
