--- a/kubernetes/cluster/apps/homerow/nopcommerce/helm-release.yaml
+++ b/kubernetes/cluster/apps/homerow/nopcommerce/helm-release.yaml
@@ -38,21 +38,21 @@ spec:
     persistence:
       config:
         enabled: true
-        mountPath: /app/App_Data/
+        mountPath: /cummies
         hostPath: /var/local/kubernetes/homerow/nopcommerce/App_Data
         type: hostPath
-      logs:
-        enabled: true
-        mountPath: /app/log
-        hostPath: /var/local/kubernetes/homerow/nopcommerce/log
-        type: hostPath
-      plugins:
-        enabled: true
-        mountPath: /app/Plugins
-        hostPath: /var/local/kubernetes/homerow/nopcommerce/plugins
-        type: hostPath
-      wwwroot:
-        enabled: true
-        mountPath: /app/wwwroot
-        hostPath: /var/local/kubernetes/homerow/nopcommerce/wwwroot
-        type: hostPath
+      # logs:
+      #   enabled: true
+      #   mountPath: /app/log
+      #   hostPath: /var/local/kubernetes/homerow/nopcommerce/log
+      #   type: hostPath
+      # plugins:
+      #   enabled: true
+      #   mountPath: /app/Plugins
+      #   hostPath: /var/local/kubernetes/homerow/nopcommerce/plugins
+      #   type: hostPath
+      # wwwroot:
+      #   enabled: true
+      #   mountPath: /app/wwwroot
+      #   hostPath: /var/local/kubernetes/homerow/nopcommerce/wwwroot
+      #   type: hostPath
