--- a/kubernetes/cluster/apps/communication/ts3/helm-release.yaml
+++ b/kubernetes/cluster/apps/communication/ts3/helm-release.yaml
@@ -33,9 +33,10 @@ spec:
       annotations:
         metallb.universe.tf/allow-shared-ip: 'node01-sharing'
       type: LoadBalancer
-      ports:
-        tcp:
-          enabled: true
+      externalIPs:
+        - 192.168.0.240
+      tcp:
+        enabled: true
     persistence:
       enabled: true
       storageClass: local-path
