--- a/kubernetes/cluster/apps/secrets/homerow-secrets.sops.yaml
+++ b/kubernetes/cluster/apps/secrets/homerow-secrets.sops.yaml
@@ -21,6 +21,8 @@ stringData:
     magento_first_name: ENC[AES256_GCM,data:M68c2qBbpg==,iv:mtmnXE7Eu0yRzyZJpv3S6DNgsDBxy0C1owdgqYXXfqo=,tag:FMiSmsSnno9t8WpOLDub+Q==,type:str]
     magento_last_name: ENC[AES256_GCM,data:cmAQ,iv:FaqFZYccZ8jcl6NnhxSi1WhHH/MtZYaFc8HSxZe3qBU=,tag:7qsIJcfNib1qQNAoLcIBbg==,type:str]
     magento_admin_uri: ENC[AES256_GCM,data:TdFgGDA=,iv:A3krKYla+aIfGs0mDBmbSjid/7HLpygamR1RxSIgZQI=,tag:rHq1AVDYAEsk6vO0iUN5Qw==,type:str]
+    factorio_username: ENC[AES256_GCM,data:OCV/novgHGPhdPGfzNU=,iv:DlUvoORT6jxYpGdnIyGwJFhdu7L4JjZ3nigOvmcrKUQ=,tag:G179gGgKOFOGaAQUb4aBdA==,type:str]
+    factorio_auth_token: ENC[AES256_GCM,data:ki6/67nJ3ro+62ZZnkYh0yN+F20r7oFGEmnCt5v2,iv:7fe9YoEyrwHEdawFRPC3CyNscZlpsjQsQOhB14cULzs=,tag:dZdb0Yb08WkgOtVhUElIvA==,type:str]
 kind: Secret
 sops:
     kms: []
@@ -28,8 +30,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-02-08T05:08:16Z"
-    mac: ENC[AES256_GCM,data:QoTJN4E2AiApSUsSdhickNPoRFY5FH2+gTZRQhDME2mRBj0YbAbic7VqAXeZMkMYlY1myTQVhEG7QzwrMHFHZGDLC7mtnC9jNeQi/83kmvBM/k8uRugkGC51I8wOsCYMfdnDWySUR9lsoioOrY+Qte7e3cHY8EdV80DWU0KJexs=,iv:LkC/g652WPOs3DnId5d3cf6hLvP6V3n/9H2vsmrCedI=,tag:IWmOcXB1GoOme3MoRCX7cA==,type:str]
+    lastmodified: "2022-08-04T01:52:57Z"
+    mac: ENC[AES256_GCM,data:V7F7EG9mdSumF98Zt7g0isPVDlMq/q5rs1JUp/VvjnO0NVd+PRMgQa3v4Bo3a5m+g4S8zDnVS6n5qAej7sJMfQVuY0/qiJcAP39Vy1PQ5VRsWO+kCwtJdcmRtj6TlQ74Y/ntTMGvY3Np5Sr6HfqzRLquJpxfSVGx9L1u9HGea6c=,iv:XiRzOfi3UvT+vcYGEh9dhD0qhWAhMP5l+2RRMORrMPw=,tag:MiZGi4GJOvzUpk81tJgRIg==,type:str]
     pgp:
         - created_at: "2022-01-18T22:37:12Z"
           enc: |
