Added missing helm repo

--- a/kubernetes/cluster/flux-bootstrap/helm-repos/kustomization.yaml
+++ b/kubernetes/cluster/flux-bootstrap/helm-repos/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - bitnami.yaml
   - blockchain-charts.yaml
   - external-secrets.yaml
+  - factorio-helm.yaml
   - hashicorp.yaml
   - jetstack.yaml
   - k8s-at-home.yaml
