--- a/kubernetes/cluster/apps/games/factorio/helm-release.yaml
+++ b/kubernetes/cluster/apps/games/factorio/helm-release.yaml
@@ -11,11 +11,11 @@ spec:
   chart:
     spec:
       # renovate: registryUrl=https://k8s-at-home.com/charts/
-      chart: valheim
-      version: 4.2.0
+      chart: factorio-server-charts
+      version: 1.0.11
       sourceRef:
         kind: HelmRepository
-        name: k8s-at-home
+        name: factorio-helm
         namespace: flux-system
       interval: 5m
   values:
