--- a/kubernetes/cluster/apps/games/factorio/pv.yaml
+++ b/kubernetes/cluster/apps/games/factorio/pv.yaml
@@ -20,4 +20,4 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - kube01.homeland.lan
+          - kube01
