--- a/smart-home/homeassistant-pi/mosquitto-config/config/mosquitto.conf
+++ b/smart-home/homeassistant-pi/mosquitto-config/config/mosquitto.conf
@@ -3,4 +3,5 @@ persistence_location /mosquitto/data/
 log_dest file /mosquitto/log/mosquitto.log
 
 ## Authentication ##
-allow_anonymous true
+# allow_anonymous false
+# password_file /mosquitto/config/password.txt
