--- a/smart-home/homeassistant-pi/mosquitto-config/config/mosquitto.conf
+++ b/smart-home/homeassistant-pi/mosquitto-config/config/mosquitto.conf
@@ -1,7 +1,1 @@
-persistence true
-persistence_location /mosquitto/data/
-log_dest file /mosquitto/log/mosquitto.log
-
-## Authentication ##
-# allow_anonymous false
-# password_file /mosquitto/config/password.txt
+listener 1883 0.0.0.0
