--- a/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
+++ b/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
@@ -25,9 +25,9 @@ spec:
     podAnnotations:
       vault.hashicorp.com/agent-inject: 'true'
       vault.hashicorp.com/role: 'vpn-app'
-      vault.hashicorp.com/agent-inject-secret-vpn-auth.txt: 'homelab/vpn/config'
+      vault.hashicorp.com/agent-inject-secret-vpn-auth.txt: 'secret/vpn-gateway/config'
       vault.hashicorp.com/agent-inject-template-vpn-auth.txt: |
-        {{- with secret "homelab/vpn/config" -}}
+        {{- with secret "secret/vpn-gateway/config" -}}
         {{ .Data.data.username }}
         {{ .Data.data.password }}
         {{- end -}}
@@ -38,8 +38,8 @@ spec:
       VPN_INTERFACE: tun0
       VPN_BLOCK_OTHER_TRAFFIC: false
       VPN_TRAFFIC_PORT: 1194
-      NOT_ROUTED_TO_GATEWAY_CIDRS: "10.0.0.0/8 192.168.0.0/16"
-      VPN_LOCAL_CIDRS: "192.168.0.0/16 172.16.0.0/24 10.0.0.0/8"
+      NOT_ROUTED_TO_GATEWAY_CIDRS: "10.0.0.0/8"
+      VPN_LOCAL_CIDRS: "10.0.0.0/8"
     routed_namespaces:
       - downloads
     publicPorts:
