--- a/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
+++ b/kubernetes/cluster/apps/vpn-gateway/helm-release.yaml
@@ -38,8 +38,8 @@ spec:
       VPN_INTERFACE: tun0
       VPN_BLOCK_OTHER_TRAFFIC: false
       VPN_TRAFFIC_PORT: 1194
-      NOT_ROUTED_TO_GATEWAY_CIDRS: "10.0.0.0/8"
-      VPN_LOCAL_CIDRS: "10.0.0.0/8"
+      NOT_ROUTED_TO_GATEWAY_CIDRS: "10.200.0.0/16 10.201.0.0/16 10.202.0.0/16"
+      VPN_LOCAL_CIDRS: "10.200.0.0/16 10.201.0.0/16 10.202.0.0/16"
     routed_namespaces:
       - downloads
     publicPorts:
@@ -76,7 +76,10 @@ spec:
                   protocol: UDP
             - to:
                 - ipBlock:
-                    cidr: 10.0.0.0/8
+                    cidr: 10.201.0.0/16
+            - to:
+                - ipBlock:
+                    cidr: 10.202.0.0/16
         configFile: |-
           client
           dev tun
