--- a/kubernetes/cluster/apps/admin/traefik/certs/cert-homelandfarm.yaml
+++ b/kubernetes/cluster/apps/admin/traefik/certs/cert-homelandfarm.yaml
@@ -2,7 +2,7 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: "homelandfarm"
+  name: "homelandfarm-cert"
   namespace: admin
 spec:
   secretName: "homelandfarm-tls"
