--- a/kubernetes/cluster/apps/admin/traefik/certs/tlsstore-homelandfarm.yaml
+++ b/kubernetes/cluster/apps/admin/traefik/certs/tlsstore-homelandfarm.yaml
@@ -2,7 +2,7 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: TLSStore
 metadata:
-  name: default
+  name: homelandfarm-tlsstore
   namespace: admin
 spec:
   defaultCertificate:
