--- a/kubernetes/cluster/apps/admin/traefik/helm-release.yaml
+++ b/kubernetes/cluster/apps/admin/traefik/helm-release.yaml
@@ -19,15 +19,6 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
-    deployment:
-      podAnnotations: {
-        vault.hashicorp.com/agent-inject: 'true',
-        vault.hashicorp.com/role: 'traefik-app',
-        vault.hashicorp.com/agent-inject-secret-dynamic.yml: 'homelab/traefik/config',
-        vault.hashicorp.com/agent-inject-template-dynamic.yml: '{{- with secret "homelab/traefik/config" -}}
-          {{ .Data.data.config }}
-          {{- end -}}'
-      }
     serviceAccount:
       name: traefik-app
     image:
@@ -43,9 +34,10 @@ spec:
         tls:
           enabled: true
           options: "default"
-    service:
-        annotations:
-          metallb.universe.tf/allow-shared-ip: 'node01-sharing'
+    volumes:
+      - name: traefik-config
+        mountPath: /etc/traefik
+        type: configMap
     additionalArguments:
-      - "--providers.file.filename=/vault/secrets/dynamic.yml"
+      - "--providers.file.filename=/etc/traefik/dynamic.yml"
       - "--providers.file.watch=true"
