--- a/kubernetes/cluster/apps/admin/traefik/certs/tamland.yaml
+++ b/kubernetes/cluster/apps/admin/traefik/certs/tamland.yaml
@@ -1,4 +1,11 @@
 ---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: tamland-tls
+  namespace: admin
+type: Opaque
+---
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
@@ -13,3 +20,12 @@ spec:
   dnsNames:
     - "tam.land"
     - "*.tam.land"
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: TLSStore
+metadata:
+  name: tamland-tlsstore
+  namespace: admin
+spec:
+  defaultCertificate:
+    secretName: "tamland-tls"
