Updated naming convention

--- a/kubernetes/cluster/apps/cert-manager/cert-manager/cloudflare-api-secret.yaml
+++ b/kubernetes/cluster/apps/cert-manager/cert-manager/cloudflare-api-secret.yaml
@@ -7,6 +7,6 @@ metadata:
 spec:
   backendType: vault
   vaultMountPoint: kubernetes
-  vaultRole: external-secrets-app
+  vaultRole: external-secrets-role
   dataFrom:
     - secret/data/cert-manager/cloudflare-api
