Updated nextcloud host

--- a/kubernetes/cluster/apps/file-sharing/nextcloud/helm-release.yaml
+++ b/kubernetes/cluster/apps/file-sharing/nextcloud/helm-release.yaml
@@ -43,6 +43,8 @@ spec:
       labels: {}
       path: /
       pathType: Prefix
+    nextcloud:
+      host: cloud.tam.land
     # Temp solution from Issue #10 to prevent installation failures
     livenessProbe:
       enabled: false
