Added crypto namespace

--- a/kubernetes/cluster/apps/crypto/bitcoind/helm-release.yaml
+++ b/kubernetes/cluster/apps/crypto/bitcoind/helm-release.yaml
@@ -34,5 +34,4 @@ spec:
     persistence:
       blockchain:
         enabled: true
-        type: hostPath
-        hostPath: /var/local/kubernetes/crypto/bitcoind/data
+        storageClass: esxi01-storage-class
