--- a/kubernetes/cluster/apps/crypto/chia/helm-release.yaml
+++ b/kubernetes/cluster/apps/crypto/chia/helm-release.yaml
@@ -21,10 +21,10 @@ spec:
   values:
     podAnnotations:
       vault.hashicorp.com/agent-inject: 'true'
-      vault.hashicorp.com/role: 'chia-app'
-      vault.hashicorp.com/agent-inject-secret-key.txt: 'homelab/chia/config'
+      vault.hashicorp.com/role: 'chia-role'
+      vault.hashicorp.com/agent-inject-secret-key.txt: 'secret/crypto/chia'
       vault.hashicorp.com/agent-inject-template-key.txt: |
-        {{- with secret "homelab/chia/config" -}}
+        {{- with secret "secret/crypto/chia" -}}
         {{ .Data.data.key }}
         {{- end -}}
     serviceAccount:
@@ -32,25 +32,19 @@ spec:
       name: chia-app
     image:
       repository: ghcr.io/chia-network/chia
-      tag: 1.3.3
+      tag: 1.5.1
     env:
       TZ: America/Toronto
       keys: /vault/secrets/key.txt
     service:
       main:
         type: LoadBalancer
-        annotations:
-          metallb.universe.tf/allow-shared-ip: 'node01-sharing'
     persistence:
       key:
         enabled: false
       blockchain:
         enabled: true
-        type: hostPath
-        hostPath: /var/local/kubernetes/crypto/chia/data
+        storageClass: esxi01-storage-class
         mountPath: /root/.chia
       plots:
-        enabled: true
-        type: hostPath
-        hostPath: /mnt/mammoth/chia-plots
-        mountPath: /plots
+        enabled: false
