Added missing access type

--- a/kubernetes/cluster/apps/crypto/chia/helm-release.yaml
+++ b/kubernetes/cluster/apps/crypto/chia/helm-release.yaml
@@ -45,6 +45,7 @@ spec:
       blockchain:
         enabled: true
         storageClass: esxi01-storage-class
+        accessMode: ReadWriteOnce
         mountPath: /root/.chia
       plots:
         enabled: false
