--- a/kubernetes/cluster/apps/crypto/bitcoind/helm-release.yaml
+++ b/kubernetes/cluster/apps/crypto/bitcoind/helm-release.yaml
@@ -29,6 +29,7 @@ spec:
       TZ: America/Toronto
     service:
       main:
+        enabled: true
         annotations:
           metallb.universe.tf/loadBalancerIPs: 10.200.12.1
           metallb.universe.tf/allow-shared-ip: "crypto-sharing"
