--- a/kubernetes/cluster/apps/other-webapps/ghostfolio/helm-release.yaml
+++ b/kubernetes/cluster/apps/other-webapps/ghostfolio/helm-release.yaml
@@ -31,9 +31,7 @@ spec:
       main:
         enabled: true
         hosts:
-          - host: "portfolio.tam.land"
+          - host: portfolio.tam.land
             paths:
               - path: /
                 pathType: Prefix
-        tls:
-          - secretname: tamland-tls
